--- a/SilverTest/SilverTest/CommandPanelWnd.xaml
+++ b/SilverTest/SilverTest/CommandPanelWnd.xaml
@@ -113,20 +113,30 @@
                 </Canvas.Effect>
                 <StackPanel Orientation="Vertical">
                     <StackPanel Height="150" Orientation="Horizontal" Margin="0,20">
-                        <StackPanel Width="100">
-                            <Label Width="90" Height="30" HorizontalAlignment="Right" HorizontalContentAlignment="Right">
-                                放大倍数:
+                        <Canvas Width="100">
+                            <Label Width="100" Height="30" HorizontalAlignment="Right" HorizontalContentAlignment="Right">
+                                主通道放大倍数:
                             </Label>
-                            <Label Width="90" Height="30" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Content="流量:"/>
-                            <Label Width="90" Height="30" HorizontalAlignment="Right" HorizontalContentAlignment="Right">
-                                高压值:
+                            <Label Width="100" Height="30" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Canvas.Top="26">
+                                副通道放大倍数:
                             </Label>
-
-                        </StackPanel>
+                            <Label Width="100" Height="30" HorizontalAlignment="Right" HorizontalContentAlignment="Right"
+                                   Visibility="Visible" Canvas.Top="56">
+                                取样时间:
+                            </Label>
+                            <Label x:Name="samplefluent" Width="100" Height="30" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Content="流量:"
+                                   Visibility="Visible" Canvas.Top="80"/>
+                            <Label Width="100" Height="30" HorizontalAlignment="Right" HorizontalContentAlignment="Right"
+                                   Visibility="Visible" Canvas.Top="105">
+                                清洗时长:
+                            </Label>
+                        </Canvas>
                         <StackPanel Width="127" Margin="0,5,0,0">
-                            <TextBox x:Name="enlargeblk" Width="90" Height="20" IsEnabled="False" HorizontalAlignment="Left">0</TextBox>
-                            <TextBox x:Name="fluentblk" Width="90" Height="20" IsEnabled="False" HorizontalAlignment="Left">0</TextBox>
-                            <TextBox Width="90" Height="25"  IsEnabled="False" HorizontalAlignment="Left">0</TextBox>
+                            <TextBox x:Name="maintunvalue_txt" Width="90" Height="20" IsEnabled="False" HorizontalAlignment="Left" >0</TextBox>
+                            <TextBox x:Name="viceunvalue_txt" Width="90" Height="20" IsEnabled="False" HorizontalAlignment="Left" >0</TextBox>
+                            <TextBox x:Name="sampletime_txt" Width="90" Height="25"  IsEnabled="False" HorizontalAlignment="Left" Visibility="Visible">0</TextBox>
+                            <TextBox x:Name="samplefluent_txt" Width="90" Height="25"  IsEnabled="False" HorizontalAlignment="Left" Visibility="Visible">0</TextBox>
+                            <TextBox x:Name="washtime_txt" Width="90" Height="25"  IsEnabled="False" HorizontalAlignment="Left" Visibility="Visible">0</TextBox>
                         </StackPanel>
                     </StackPanel>
                     <Canvas Height="30" >
