--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -239,7 +239,7 @@
                                   CanUserAddRows="False"
                                   ColumnHeaderStyle="{StaticResource MyColumnHeader}"
                                   ItemsSource="{Binding}"  
-                                  Margin="0,0,0,0" AutoGenerateColumns="False" CellEditEnding="NewTargetDgd_CellEditEnding" MouseRightButtonDown="NewTargetDgd_MouseRightButtonDown" LoadingRow="NewTargetDgd_LoadingRow" controls:DataGridHelper.EnableCellEditAssist="True" SelectedCellsChanged="NewTargetDgd_SelectedCellsChanged">
+                                  Margin="0,0,0,0" AutoGenerateColumns="False" CellEditEnding="NewTargetDgd_CellEditEnding" MouseRightButtonDown="NewTargetDgd_MouseRightButtonDown" LoadingRow="NewTargetDgd_LoadingRow" controls:DataGridHelper.EnableCellEditAssist="True" SelectedCellsChanged="NewTargetDgd_SelectedCellsChanged" SelectionChanged="NewTargetDgd_SelectionChanged">
                             <DataGrid.Style>
                                 <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                                     <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush7}" />
