--- a/SilverTest/BasicWaveChart/BasicWaveChartUC.xaml
+++ b/SilverTest/BasicWaveChart/BasicWaveChartUC.xaml
@@ -70,6 +70,7 @@
         <ContextMenu x:Key="wavemenu">
             <MenuItem x:Name="fullshowmenu" Header="全景" Click="fullshowmenu_Click"></MenuItem>
             <MenuItem x:Name="movemenu" Header="移动" Click="movemenu_Click"></MenuItem>
+            <MenuItem x:Name="enlargemenu" Header="放大" Click="enlargemenu_Click"></MenuItem>
             <MenuItem x:Name="integralmenu" Header="积分" Click="integralmenu_Click"  Visibility="Hidden"></MenuItem>
         </ContextMenu>
     </UserControl.Resources>
