--- a/SilverTest/BasicWaveChart/BasicWaveChartUC.xaml
+++ b/SilverTest/BasicWaveChart/BasicWaveChartUC.xaml
@@ -98,7 +98,8 @@
             <widget:YAxisCtl x:Name="yaxis" Stroke="Black" StrokeThickness="1" Width="50" 
                              ClipToBounds="False"
                              YScaleMaxValue="50"
-                             YScaleLineNumber="1000"
+                             YSCaleOStart="0"
+                             YScaleLineNumber="50"
                              YCommentNumber="5"
                              YArrowStyle="NONE"
                              YArrowheight="10"
