--- a/SilverTest/SilverTest/CommandPanelWnd.xaml
+++ b/SilverTest/SilverTest/CommandPanelWnd.xaml
@@ -118,35 +118,35 @@
                 <StackPanel x:Name="buttoncontainerstp" Width="104" 
                         Background="Transparent"
                         MouseLeftButtonDown="buttoncontainerstp_MouseLeftButtonDown" Canvas.Left="66" Canvas.Top="60" Margin="0,0,0,14">
-                    <Button x:Name="pm1" FontSize="12" Content="测量 >" Height="30" Width="70" HorizontalAlignment="Left" MouseEnter="pm1_MouseEnter" Click="pm1_Click" >
+                    <Button x:Name="pm1" FontSize="12" Content="测量 >" Height="30" Width="90" Margin="7,0,0,0" HorizontalAlignment="Left" MouseEnter="pm1_MouseEnter" Click="pm1_Click" >
                     </Button>
                     <Button x:Name="m11" FontSize="12" Content="取样" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0"  Visibility="Collapsed" Click="m11_Click"></Button>
                     <Button x:Name="m12" FontSize="12" Content="清洗" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m12_Click"></Button>
                     <Button x:Name="m13" FontSize="12" Content="测量" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m13_Click"></Button>
                     <Button x:Name="m15" FontSize="12" Content="保存" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m15_Click"></Button>
                     <Button x:Name="m14" FontSize="12" Content="返回上一级" Height="30" Width="75" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m14_Click"></Button>
-                    <Button x:Name="pm2" FontSize="12" Content="连续测量>" Height="30" Width="70" HorizontalAlignment="Left" Click="pm2_Click"></Button>
+                    <Button x:Name="pm2" FontSize="12" Content="连续测量>" Height="30" Width="90" Margin="7,0,0,0" HorizontalAlignment="Left" Click="pm2_Click"></Button>
                     <Button x:Name="m21" FontSize="12" Content="开始" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0"  Visibility="Collapsed" Click="m21_Click"></Button>
                     <Button x:Name="m22" FontSize="12" Content="停止" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0"  Visibility="Collapsed" Click="m22_Click"></Button>
                     <Button x:Name="m23" FontSize="12" Content="保存" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0"  Visibility="Collapsed" Click="m23_Click"></Button>
                     <Button x:Name="pm3" FontSize="12" Content="校准"  Height="30" Width="70" HorizontalAlignment="Left" Click="pm3_Click" Visibility="Collapsed"></Button>
                     <Button x:Name="pm4" FontSize="12" Content="通信"  Height="30" Width="70" HorizontalAlignment="Left" Click="pm4_Click" Visibility="Collapsed"></Button>
-                    <Button x:Name="pm5" FontSize="12" Content="液体测量>"  Height="30" Width="70" HorizontalAlignment="Left" MouseEnter="pm5_MouseEnter" Click="pm5_Click"/>
+                    <Button x:Name="pm5" FontSize="12" Content="液体测量>"  Height="30" Width="90" Margin="7,0,0,0" HorizontalAlignment="Left" MouseEnter="pm5_MouseEnter" Click="pm5_Click"/>
                     <Button x:Name="m51" Content="清洗" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m51_Click"></Button>
                     <Button x:Name="m52" FontSize="12" Content="测量" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m52_Click" ></Button>
                     <Button x:Name="m53" FontSize="12" Content="返回上一级" Height="30" Width="75" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m53_Click"></Button>
                     <Button x:Name="pm6" FontSize="12" Content="参数设置"  Height="30" Width="70" HorizontalAlignment="Left" Click="pm6_Click" Visibility="Collapsed"></Button>
-                    <Button x:Name="pmb" FontSize="12" Content="能量值调整"  Height="30" Width="70" HorizontalAlignment="Left" Click="Pmb_Click"></Button>
-                    <Button x:Name="pma" FontSize="12" Content="快速测量"  Height="30" Width="70" HorizontalAlignment="Left" Click="Pma_Click"></Button>
+                    <Button x:Name="pmb" FontSize="12" Content="能量值调整"  Height="30" Width="90" Margin="7,0,0,0" HorizontalAlignment="Left" Click="Pmb_Click"></Button>
+                    <Button x:Name="pma" FontSize="12" Content="快速测量"  Height="30" Width="90" Margin="7,0,0,0" HorizontalAlignment="Left" Click="Pma_Click"></Button>
                     <Button x:Name="ma1" FontSize="12" Content="开始" Height="30" Width="75" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="Ma1_Click"></Button>
                     <Button x:Name="ma2" FontSize="12" Content="停止" Height="30" Width="75" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="Ma2_Click"></Button>
-                    <Button x:Name="pm7" FontSize="12" Content="状态获取"  Height="30" Width="70" HorizontalAlignment="Left" Click="pm7_Click"></Button>
-                    <Button x:Name="pm8" FontSize="12" Content="监控>"  Height="30" Width="70" HorizontalAlignment="Left" Click="Pm8_Click"></Button>
+                    <Button x:Name="pm7" FontSize="12" Content="状态获取"  Height="30" Width="90" Margin="7,0,0,0" HorizontalAlignment="Left" Click="pm7_Click"></Button>
+                    <Button x:Name="pm8" FontSize="12" Content="监控>"  Height="30" Width="90" Margin="7,0,0,0" HorizontalAlignment="Left" Click="Pm8_Click"></Button>
                     <Button x:Name="m81" FontSize="12" Content="开始监控" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" 
                             Margin="20,2,0,0" Visibility="Collapsed" Click="M81_Click" ></Button>
                     <Button x:Name="m82" FontSize="12" Content="停止监控" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" 
                             Margin="20,2,0,0" Visibility="Collapsed" Click="M82_Click" ></Button>
-                    <Button x:Name="pm9" FontSize="12" Content="报警测试>"  Height="30" Width="70" HorizontalAlignment="Left" Click="Pm9_Click"></Button>
+                    <Button x:Name="pm9" FontSize="12" Content="报警测试>"  Height="30" Width="90" Margin="7,0,0,0" HorizontalAlignment="Left" Click="Pm9_Click"></Button>
                     <Button x:Name="m91" FontSize="12" Content="开始测试" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" 
                             Margin="20,2,0,0" Visibility="Collapsed" Click="M91_Click" ></Button>
                     <Button x:Name="m92" FontSize="12" Content="停止测试" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" 
@@ -156,10 +156,8 @@
             <Canvas Height="339" Canvas.Left="143" Canvas.Top="15" Width="247"
                        Background="White"
                    >
-                <Canvas.Effect>
-                    <DropShadowEffect ShadowDepth="5" BlurRadius="5"/>
-                </Canvas.Effect>
-                <StackPanel Orientation="Vertical">
+
+                <StackPanel Orientation="Vertical" Margin="20,0,0,0">
                     <StackPanel Height="150" Orientation="Horizontal" Margin="0,20">
                         <Canvas Width="100">
                             <Label Width="100" Height="30" HorizontalAlignment="Right" HorizontalContentAlignment="Right">
@@ -179,7 +177,7 @@
                                 清洗时长:
                             </Label>
                         </Canvas>
-                        <StackPanel Width="127" Margin="0,5,0,0">
+                        <StackPanel Width="127" Margin="10,5,0,0">
                             <TextBox x:Name="maintunvalue_txt" Width="90" Height="20" IsEnabled="False" HorizontalAlignment="Left" >3</TextBox>
                             <TextBox x:Name="viceunvalue_txt" Width="90" Height="20" IsEnabled="False" HorizontalAlignment="Left" >3</TextBox>
                             <TextBox x:Name="sampletime_txt" Width="90" Height="25"  IsEnabled="False" HorizontalAlignment="Left" Visibility="Visible">2</TextBox>
