--- a/SilverTest/SilverTest/CommandPanelWnd.xaml
+++ b/SilverTest/SilverTest/CommandPanelWnd.xaml
@@ -91,7 +91,7 @@
                     <Button x:Name="m12" FontSize="12" Content="清洗" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m12_Click"></Button>
                     <Button x:Name="m13" FontSize="12" Content="测量" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m13_Click"></Button>
                     <Button x:Name="m14" FontSize="12" Content="返回上一级" Height="30" Width="75" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0" Visibility="Collapsed" Click="m14_Click"></Button>
-                    <Button x:Name="pm2" FontSize="12" Content="连续测量>" Height="30" Width="90" Margin="7,0,0,0" HorizontalAlignment="Left" Click="pm2_Click"></Button>
+                    <Button x:Name="pm2" FontSize="12" Content="连续测量>" Height="30" Width="90" Margin="7,0,0,0" HorizontalAlignment="Left" Click="pm2_Click" Visibility="Collapsed"></Button>
                     <Button x:Name="m21" FontSize="12" Content="开始" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0"  Visibility="Collapsed" Click="m21_Click"></Button>
                     <Button x:Name="m22" FontSize="12" Content="停止" Height="30" Width="60" HorizontalAlignment="Left" Background="LightPink" Margin="20,2,0,0"  Visibility="Collapsed" Click="m22_Click"></Button>
                     <Button x:Name="pm3" FontSize="12" Content="校准"  Height="30" Width="90" Margin="7,0,0,0" HorizontalAlignment="Left" Click="pm3_Click"></Button>
